Build:  Enable preview features and  update to javafx 21.0.1
Preview features needed for string templates. JavaFX update needed for Java 21 support.